docs/api/qiskit/1.3/qiskit.pulse.channels.ControlChannel.mdx
---
title: ControlChannel (v1.3)
description: API reference for qiskit.pulse.channels.ControlChannel in qiskit v1.3
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.channels.ControlChannel
---

# ControlChannel

<Class id="qiskit.pulse.channels.ControlChannel" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/pulse/channels.py#L191-L197" signature="qiskit.pulse.channels.ControlChannel(*args, **kwargs)" modifiers="class">
  Bases: `PulseChannel`

  Control channels provide supplementary control over the qubit to the drive channel. These are often associated with multi-qubit gate operations. They may not map trivially to a particular qubit index.

  Channel class.

  <Admonition title="Deprecated since version 1.3" type="danger">
    The class `qiskit.pulse.channels.Channel` is deprecated as of Qiskit 1.3. It will be removed in Qiskit 2.0. The entire Qiskit Pulse package is being deprecated and will be moved to the Qiskit Dynamics repository: [https://github.com/qiskit-community/qiskit-dynamics](https://github.com/qiskit-community/qiskit-dynamics)
  </Admonition>

  **Parameters**

  **index** – Index of channel.

  ## Attributes

  ### index

  <Attribute id="qiskit.pulse.channels.ControlChannel.index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.
  </Attribute>

  ### name

  <Attribute id="qiskit.pulse.channels.ControlChannel.name">
    Return the shorthand alias for this channel, which is based on its type and index.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.pulse.channels.ControlChannel.parameters">
    Parameters which determine the channel index.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.pulse.channels.ControlChannel.prefix" attributeTypeHint="str | None" attributeValue="'u'">
    A shorthand string prefix for characterizing the channel type.
  </Attribute>

  ## Methods

  ### is\_parameterized

  <Function id="qiskit.pulse.channels.ControlChannel.is_parameterized" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/pulse/channels.py#L137-L139" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
  </Function>
</Class>

